* gpl2016.tex: add url

--- a/gpl2016.tex
+++ b/gpl2016.tex
@@ -482,7 +482,7 @@
     \sitem Released under the terms of the Attribution-ShareAlike 4.0
     International (CC BY-SA 4.0) license.
 
-    \sitem Source code available at \ldots
+    \sitem Source code available at: \url{http://yrk.nfshost.com/repos/gpl2016.git}
 
   \end{itemize}
 \end{wideslide}
