Add items from the FSF's annual report.

--- a/gpl2016.tex
+++ b/gpl2016.tex
@@ -99,17 +99,18 @@
 
     \pp
 
-    \nitem \ldots leads the GNU Project
+    \nitem \ldots leads the GNU Project \pp (2015: 460 projects led by
+    volunteers, 321 copyright assignments/disclaimers completed)
 
     \pp
 
-    \nitem \ldots is effective: the FSF is a tiny organization by choice,
-    but has a strong voice, efficiently uses a small budget sourced
-    almost entirely from direct donations
+    \nitem \ldots is effective: tiny by choice, a strong voice,
+    efficiently uses a small budget \pp (FY2015: \$1.2m operating
+    budget, average donation \$101)
 
     \pp
 
-    \nitem \ldots inspires a lot of volunteer work.
+    \nitem \ldots inspires a lot of activism
   \end{itemize}
 \end{wideslide}
 
@@ -209,7 +210,7 @@
     \setlength{\itemsep}{1em}
 
     \nitem The FSF gets a lot of violation reports, and investigates
-    all of them.
+    all of them (128 reports in 2015)
 
     \pp
 
@@ -226,7 +227,7 @@
     \pp
 
     \nitem The goal is compliance, and repairing damage to the
-    community; not money.
+    community; not money
 
   \end{itemize}
 \end{wideslide}
@@ -241,7 +242,7 @@
     \setlength{\itemsep}{1em}
 
     \nitem Most parties are unaware of the violation, and act quickly
-    to correct it.
+    to correct it
 
     \pp
 
@@ -253,6 +254,10 @@
 
     \nitem In other cases the FSF has expert legal advice from the
     Software Freedom Law Center.
+
+    \pp
+
+    \nitem 6 licensing cases successfully resolved in 2015
 
   \end{itemize}
 \end{wideslide}
@@ -314,8 +319,8 @@
     \pp
 
     \nitem Already awarded RYF certification to a total of 19 hardware
-    products, with more on the way, and more in the formal review
-    process.
+    products (6 in 2015) \pp with more on the way, and more in the
+    formal review process.
 
   \end{itemize}
 \end{wideslide}
